@@ -37,12 +37,12 @@ public abstract class TurnoutOperationXml extends jmri.configurexml.AbstractXmlA
             log.debug("loadOperation for class {}", className);
             try {
                 Class<?> adapterClass = Class.forName(className);
-                TurnoutOperationXml adapter = (TurnoutOperationXml) adapterClass.newInstance();
+                TurnoutOperationXml adapter = (TurnoutOperationXml) adapterClass.getDeclaredConstructor().newInstance();
                 result = adapter.loadOne(e);
                 if (result.getName().charAt(0) == '*') {
                     result.setNonce(true);
                 }
-            } catch (ClassNotFoundException | InstantiationException e1) {
+            } catch (ClassNotFoundException | InstantiationException | NoSuchMethodException | java.lang.reflect.InvocationTargetException e1) {
                 log.error("while creating TurnoutOperation", e1);
                 return null;
             } catch (IllegalAccessException e2) {
@@ -95,8 +95,8 @@ public abstract class TurnoutOperationXml extends jmri.configurexml.AbstractXmlA
         log.debug("getAdapter looks for {}", fullConfigName);
         try {
             Class<?> configClass = Class.forName(fullConfigName);
-            adapter = (TurnoutOperationXml) configClass.newInstance();
-        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+            adapter = (TurnoutOperationXml) configClass.getDeclaredConstructor().newInstance();
+        } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | NoSuchMethodException | java.lang.reflect.InvocationTargetException e) {
             log.error("exception in getAdapter", e);
         }
         if (adapter == null) {
